# TinyRenderLab

./: .gitignore  CMakeLists.txt
src/: AreaLight.h  BVH.cpp  BVH.h  Bounds.h  Film.cpp  Film.h  FilmTile.cpp  FilmTile.h  Intersection.h  Light.h  Material.h  Object.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sphere.h  Triangle.h  Vector.h  global.cpp  global.h  main.cpp
src/Engine/: CMakeLists.txt
src/Engine/Basic/: AreaLight.h  Geometry.h  Intersection.h  Light.h  OBJ_Loader.h  Object.h  Sphere.h  Triangle.h  Util.cpp  Util.h
src/Engine/Core/: BVH.cpp  BVH.h  Film.cpp  Film.h  FilmTile.cpp  FilmTile.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/Engine/Material/: Material.h
src/Engine/Standard/: main.cpp
